Updates for amazon linux and add gecos

--- a/templates/duo.conf.erb
+++ b/templates/duo.conf.erb
@@ -40,3 +40,8 @@ groups=<%= @group %>
 ; HTTP proxy
 http_proxy=<%= @http_proxy %>
 <% end -%>
+<% if @send_gecos != '' -%>
+
+; Send user comment instead of user name
+send_gecos=<%= @send_gecos %>
+<% end -%>
